file structure modifications

--- a/recipes/chickentenders.html
+++ b/recipes/chickentenders.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Baked Chicken Tenders</h1>
-    <img src="chickentenders.jpg" width="300" height="300"><img src="chickentenders2.jpg" width="300" height="300">
+    <img src="images/chickentenders.jpg" width="300" height="300"><img src="images/chickentenders2.jpg" width="300" height="300">
     <h3>Description</h3>
     <p>If you're in need of a kid-friendly dinner that will please even the pickiest of eaters, you're in luck. These baked chicken tenders couldn't be simpler to make—and they're a healthier option than deep-fried chicken. Skip the drive-thru and try this no-fuss dinner that everyone at your table will love.</p>
     <p>Nobody will believe how simple it is to make these baked chicken tenders. You'll find the full, step-by-step recipe below </p>
