--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Classic Lasagna</h1>
-    <img src="lasagna.jpg" width="300" height="300">
+    <img src="images/lasagna.jpg" width="300" height="300">
     <h3>Description</h3>
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
