--- a/recipes/meatballs.html
+++ b/recipes/meatballs.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Korean Barbecue Meatballs</h1>
-    <img src="images/KoreanMeatballs.jpg" height="300" width="300"> <img src="images/Meatballs2.jpg" height="300" width="300">
+    <img src="images/KoreanMeatballs.jpg" height="300" width="300" alt="Meatballs"> <img src="images/Meatballs2.jpg" height="300" width="300" alt="meatballs">
     <h3>Description</h3>
     <p>Korean Barbecue-style meatballs are the best!</p>
     <p>They're very sweet and spicy, and little salty, but also profoundly savory and satisfying.</p>
