--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Adam's Favorite Recipes</h1>
     <p>These are recipes of my favorite dishes that you can explore. Enjoy!!</p>
     <h4>Recipes</h4>
     <ul>
