--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,33 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="lasagna.css">
 </head>
 <body>
-    <h1>Classic Lasagna</h1>
-    <img src="images/lasagna.jpg" width="300" height="300">
-    <h3>Description</h3>
-    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
-    <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
-    <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Meat</li>
-        <li>Onion and garlic</li>
-        <li>Tomato paste</li>
-        <li>Sugar</li>
-        <li>Spices and Seasoning</li>
-        <li>Lasagna noodles</li>
-        <li>Cheese</li>
-        <li>Eggs</li>
-    </ul>
-    <h3>Cooking Steps</h3>
-    <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna according to the recipe instructions.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
-    </ol>
+    <div class="bg-image"></div>
+    <h1 class="bg-text">Classic Lasagna</h1>
+    <div class="content">
+        <h3>Description</h3>
+        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+        <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
+        <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below</p>
+        <h3 id="h3">Ingredients</h3>
+        <ul id="list">
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato paste</li>
+            <li>Sugar</li>
+            <li>Spices and Seasoning</li>
+            <li>Lasagna noodles</li>
+            <li>Cheese</li>
+            <li>Eggs</li>
+        </ul>
+        <div id="h3">Cooking Steps</div>
+        <ol id="list">
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+    </div>    
 </body>
 </html>
