learning CSS using lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="lasagna.css">
 </head>
 <body>
-    <div class="bg-image"></div>
-    <h1 class="bg-text">Classic Lasagna</h1>
-    <div class="content">
+   <div class="bg-image">
+    
+    <div id="content">
+        <h1>Classic Lasagna</h1>
         <h3>Description</h3>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
         <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
