--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Adam's Favorite Recipes</h1>
+    <div class="headings1">Adam's Favorite Recipes</h1></div>
     <p>These are recipes of my favorite dishes that you can explore. Enjoy!!</p>
-    <h4>Recipes</h4>
-    <ul>
-        <li><a href="recipes/lasagna.html">Classic Lasagna Recipe</a></li>
-        <li><a href="recipes/chickentenders.html">Chicken Tenders Recipe</a></li>
-        <li><a href="recipes/meatballs.html">Korean Barbecue Meatballs Recipe</a></li>
-    </ul>
+    <div class = "headings2">Recipes</div>
+    <div class = "list">
+        <ul>
+            <li><a href="recipes/lasagna.html">Classic Lasagna Recipe</a></li>
+            <li><a href="recipes/chickentenders.html">Chicken Tenders Recipe</a></li>
+            <li><a href="recipes/meatballs.html">Korean Barbecue Meatballs Recipe</a></li>
+        </ul>
+    </div>
 </body>
 </html>
