changes to lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,32 +9,36 @@
 <body>
    <div class="bg-image">
     
-    <div id="content">
+    <div class="content">
         <h1>Classic Lasagna</h1>
         <h3>Description</h3>
         <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
         <p>Making lasagna can be time-consuming, but the results are well worth the wait.</p>
         <p>You'll find a detailed ingredient list and step-by-step instructions in the recipe below</p>
-        <h3 id="h3">Ingredients</h3>
-        <ul id="list">
-            <li>Meat</li>
-            <li>Onion and garlic</li>
-            <li>Tomato paste</li>
-            <li>Sugar</li>
-            <li>Spices and Seasoning</li>
-            <li>Lasagna noodles</li>
-            <li>Cheese</li>
-            <li>Eggs</li>
-        </ul>
-        <div id="h3">Cooking Steps</div>
-        <ol id="list">
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna according to the recipe instructions.</li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
-        </ol>
+        <div class="headings">Ingredients</div>
+        <div class="list">
+            <ul>
+                <li>Meat</li>
+                <li>Onion and garlic</li>
+                <li>Tomato paste</li>
+                <li>Sugar</li>
+                <li>Spices and Seasoning</li>
+                <li>Lasagna noodles</li>
+                <li>Cheese</li>
+                <li>Eggs</li>
+            </ul>
+        </div>
+        <div class="headings">Cooking Steps</div>
+        <div class="list">
+            <ol>
+                <li>Make the meat sauce.</li>
+                <li>Cook the noodles.</li>
+                <li>Make the ricotta mixture.</li>
+                <li>Layer the lasagna according to the recipe instructions.</li>
+                <li>Cover with foil and bake.</li>
+                <li>Let the lasagna rest before serving.</li>
+            </ol>
+        </div>
     </div>    
 </body>
 </html>
